--- a/Multifactor-Access/nbproject/private/private.properties
+++ b/Multifactor-Access/nbproject/private/private.properties
@@ -1,13 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\Zacarias_Mercado\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1999775907.properties
-j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\lib\\endorsed";"C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\modules\\endorsed" -javaagent:"C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\domains\\domain1\\config\\glassfish-acc.xml",client=jar=
+deploy.ant.properties.file=C:\\Users\\Zack_\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GlassFishEE6\\Properties\\gfv3-803338662.properties
+j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Program Files\\glassfish-4.1.1\\glassfish\\lib\\endorsed";"C:\\Program Files\\glassfish-4.1.1\\glassfish\\modules\\endorsed" -javaagent:"C:\\Program Files\\glassfish-4.1.1\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Users\\Zack_\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GF_4.1.1\\domain1\\config\\glassfish-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Zacarias_Mercado/Documents/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Zacarias_Mercado/Documents/glassfish4/glassfish
-j2ee.server.instance=[C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish;C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Zacarias_Mercado/Documents/glassfish4
-netbeans.user=C:\\Users\\Zacarias_Mercado\\AppData\\Roaming\\NetBeans\\8.2
+j2ee.server.domain=C:/Users/Zack_/AppData/Roaming/NetBeans/8.2rc/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+netbeans.user=C:\\Users\\Zack_\\AppData\\Roaming\\NetBeans\\8.2rc
 selected.browser=Chrome
-wa.copy.client.jar.from=C:\\Users\\Zacarias_Mercado\\Documents\\glassfish4\\glassfish\\domains\\domain1\\generated\\xml
+wa.copy.client.jar.from=C:\\Users\\Zack_\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GF_4.1.1\\domain1\\generated\\xml
